# krrr

./: .gitignore  Cargo.toml  README.md  example.env  rrcode.fish
src/: main.rs
