[package]
name = "krrr"
version = "0.1.0"
edition = "2021"
authors = ["Ken Hiatt <ken.hiatt@gmail.com>"]
description = "Ken's Rust REST Remote"
license = "MIT"
keywords = ["vscode", "remote"]

[dependencies]
dotenvy = "0.15.7"
local-ip-address = "0.6.1"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
